Model and Annotation update to fix build errors

--- a/code/srv/i18n/i18n.properties
+++ b/code/srv/i18n/i18n.properties
@@ -22,6 +22,7 @@ role = Role
 role.typeNamePlural = Roles
 
 description = Description
+text = Text
 generalInformation = General Information 
 roleInformation = Role Information
 adminData = Admin Data
